@@ -3,6 +3,7 @@ Release 0.6.7
 =============
 
 * optimizations for clusters (auto blosc and network bandwith)
+* addition of a dead_channels option in the [detection] section, as requested
 
 =============
 Release 0.6.6
